# TelecomOps-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: app.yaml
docs/design/: api_design.md  architecture.mmd  langgraph_workflow_design.md  neo4j_schema.md  postgres_schema.sql  resume_project_description.md
docs/progress/: milestone1_summary.md  milestone2_summary.md  milestone3_summary.md
src/telecomops_agent/: __init__.py
src/telecomops_agent/agent/: __init__.py  graph.py  nodes.py  state.py
src/telecomops_agent/api/: __init__.py  dependencies.py  errors.py  main.py  routes.py  schemas.py
src/telecomops_agent/db/: __init__.py
src/telecomops_agent/evaluation/: __init__.py
src/telecomops_agent/retrievers/: __init__.py
src/telecomops_agent/tools/: __init__.py
src/telecomops_agent/utils/: __init__.py
tests/: __init__.py  conftest.py  test_agent_graph.py  test_api.py
